fix slider alignment

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,19 @@
     font-style: normal;
     font-display: swap;
 }
+@import"https://fonts.googleapis.com/css2?family=Inconsolata:wght@250;325;350;375;400;425;450;475;500;525;550;575;600;625;650;675;700;725;750;775;800&display=swap";@import"https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap";body,#root {
+    background-color: #151313;
+    height: 100vh;
+    width: 100vw;
+    position: relative
+}
+
+@supports (-webkit-touch-callout: none) {
+    body,#root {
+        height: -webkit-fill-available
+
+    }
+}
 #MathJax_Hidden{
     height: 0px;
 }
@@ -135,7 +148,13 @@ body {
   font-size: 16px;
   color: var(--text-color);
   overflow-x:hidden;
-  height: 100%;  /**/
+  /* height: 100%;   */
+  /* height: fit-content;
+  max-height: 100%;
+  width: fit-content;
+  max-width: 100%; */
+  height: 100%;
+  
 }
 
 p {
@@ -182,38 +201,64 @@ h1 {
 }
 
 #demos {
-    max-width: 100%;
-    max-height: 100%;
-    display: grid;
+    /* max-width: 100%;
+    max-height: 100%; */
+    display: block;
+    flex-wrap: wrap;
     position: fixed;
-    overflow:auto;
+    /* overflow:auto; */
+    overflow: clip;
+    /* overflow-clip-margin: content-box; */
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
     float: right;
     width: fit-content;
     margin-right: 1%;
     margin-left: 46%;
+    margin-top: 0%;
+    margin-bottom: 1%;
+    padding: 0;
     /* height: 600px; */
-    /* height: 100%; */
-    height: fit-content;
+    height: 100%;
+    /* height: fit-content; */
 }
 #shear-2d-cross-section-canvas{
+    max-width: 100%;
     width: fit-content;
+    height: fit-content;
+    max-height: 100%;
+    display: block;
 }
 #shear-3d-canvas{
+    max-width: 100%;
+    max-height: 100%;
     width: fit-content;
+    height: fit-content;
+    display: block;
 }
 #projective-line-canvas{
+    max-width: 100%;
+    max-height: 100%;
     width: fit-content;
+    height: fit-content;
 }
 #projective-plane-canvas{
+    max-width: 100%;
+    max-height: 100%;
     width: fit-content;
+    height: fit-content;
 }
 #screen-canvas{
+    max-width: 100%;
+    max-height: 100%;
     width: fit-content;
+    height: fit-content;
 }
 #orthographic-projection-canvas{
+    max-width: 100%;
+    max-height: 100%;
     width: fit-content;
+    height: fit-content;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 #demos::-webkit-scrollbar {
@@ -346,6 +391,9 @@ nav ul li a span.rotate{
     transform: translateY(-50%) rotate(-180deg);
 }
 #page-body {
+    /* height: fit-content;
+    max-height: 100%; */
+    height: 100%;
     margin-top: 0%;
     margin-bottom: 1%;
     margin-left: 15%;
@@ -522,7 +570,7 @@ nav ul li a span.rotate{
     display:inline-flex;
 }
 .slidecontainer {
-    margin-top:0px;
+    margin-top: 10px;
     margin-bottom: 0px;
     display: inline-block;
     vertical-align: top;
@@ -572,32 +620,33 @@ input[type="range"] {
     padding: 0px;
     width: fit-content;
     /* height: auto; 600px */
-    /* height: 100%; */
+    height: 100%;
     height: fit-content;
-    max-height: 100%;
+    /* max-height: 100%; */
     align-items: center;
-    display: block;
+    display: grid;
     justify-content: center;
     align-items: center;
     border-collapse: separate;
     border-spacing: 15px;
     border-style: solid;
-
 }
 
 #affine-transform-demo{
     /* display: none; */
-    display: flex;
+    display: block;
     max-width: 100%;
     max-height: 100%;
     height: fit-content;
     width: fit-content;
-    position: relative;
+    position:static;
+    overflow: clip;
+    overflow-clip-margin: content-box;
 }
 
 #projective-geometry-demo{
     /* display: none; */
-    display: flex;
+    display: grid;
     max-width: 100%;
     max-height: 100%;
     height: fit-content;
@@ -607,7 +656,7 @@ input[type="range"] {
 
 #perspective-projection-demo{
     /* display: none; */
-    display: flex;
+    display: grid;
     max-width: 100%;
     max-height: 100%;
     height: fit-content;
